@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2022 the original author or authors.
+ * Copyright 2004-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -53,6 +53,7 @@ public class PreparedStatementLogProxy extends BaseLogProxy implements Invocatio
     this.sql = sql;
   }
 
+  @Override
   public Object invoke(Object proxy, Method method, Object[] params) throws Throwable {
     try {
       if (EXECUTE_METHODS.contains(method.getName())) {
@@ -89,9 +90,9 @@ public class PreparedStatementLogProxy extends BaseLogProxy implements Invocatio
       } else if ("equals".equals(method.getName())) {
         Object ps = params[0];
         if (ps instanceof Proxy) {
-          return new Boolean(proxy == ps);
+          return Boolean.valueOf(proxy == ps);
         }
-        return new Boolean(false);
+        return Boolean.valueOf(false);
       } else if ("hashCode".equals(method.getName())) {
         return Integer.valueOf(proxy.hashCode());
       } else {
