@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2022 the original author or authors.
+ * Copyright 2004-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -39,9 +39,9 @@ import java.sql.SQLException;
  *   public Object getResult(ResultGetter getter) throws SQLException {
  *     String s = getter.getString();
  *     if (YES.equalsIgnoreCase(s)) {
- *       return new Boolean(true);
+ *       return Boolean.valueOf(true);
  *     } else if (NO.equalsIgnoreCase(s)) {
- *       return new Boolean(false);
+ *       return Boolean.valueOf(false);
  *     } else {
  *       throw new SQLException("Unexpected value " + s + " found where " + YES + " or " + NO + " was expected.");
  *     }
@@ -58,9 +58,9 @@ import java.sql.SQLException;
  *
  *   public Object valueOf(String s) {
  *     if (YES.equalsIgnoreCase(s)) {
- *       return new Boolean(true);
+ *       return Boolean.valueOf(true);
  *     } else if (NO.equalsIgnoreCase(s)) {
- *       return new Boolean(false);
+ *       return Boolean.valueOf(false);
  *     } else {
  *       throw new SQLException("Unexpected value " + s + " found where " + YES + " or " + NO + " was expected.");
  *     }
@@ -82,7 +82,7 @@ public interface TypeHandlerCallback {
    * @throws SQLException
    *           If any error occurs.
    */
-  public void setParameter(ParameterSetter setter, Object parameter) throws SQLException;
+  void setParameter(ParameterSetter setter, Object parameter) throws SQLException;
 
   /**
    * Performs processing on a value before after it has been retrieved from a ResultSet.
@@ -95,7 +95,7 @@ public interface TypeHandlerCallback {
    * @throws SQLException
    *           If any error occurs.
    */
-  public Object getResult(ResultGetter getter) throws SQLException;
+  Object getResult(ResultGetter getter) throws SQLException;
 
   /**
    * Casts the string representation of a value into a type recognized by this type handler. This method is used to
@@ -114,6 +114,6 @@ public interface TypeHandlerCallback {
    *         <li>null, only if null was passed in.</li>
    *         </ol>
    */
-  public Object valueOf(String s);
+  Object valueOf(String s);
 
 }
